# llm_realtime

./: Makefile  README.md  pyproject.toml
backend/: api.py  main.py
backend/auth/auth/: api.py  auth.py  user.py
backend/auth/tests/: test_auth.py
backend/msocket/msocket/: mclient.py  msocket.py  wsocket.py  zclient.py
backend/msocket/tests/: test_wsocket.py
backend/utils/utils/: log.py
